--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="Latest status of weather" lang="en-us" name="description">
     <meta content="current weather, ozone hole, ozone, quiz, green environment quiz, white lotus, kidKrishkode" lang="en-us" name="keywords">
     <title version="1.0">Weather by WhiteLotus</title>
-    <link rel="icon" href="https://github.com/WHITELOTUS4/weatherbyWHITELOTUS.github.io/blob/main/fav-icon/logo.jpg">
+    <link rel="icon" href="./fav-icon/logo.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
