--- a/cit.html
+++ b/cit.html
@@ -1129,7 +1129,7 @@ answers.forEach((event) => {
       aboutlist: ["img",1,"5kb","All type","English",0,"No","No","Yes"],
       ytlink: "https://www.youtube.com/embed/?controls=0",
       morepro: [["./pic/bio.png","Biology CA3(2023)","https://drive.google.com/uc?export=download&id=1FFktDCMTM1Tf16kDQ90pyOILagTqmpFw"],["./pic/architecture.png","Architecture CA3(2023)","https://drive.google.com/uc?export=download&id=#"],["./pic/env.png","Environment CA3(2023)","https://drive.google.com/uc?export=download&id=#"],["./pic/auto.png","Automata CA3(2023)","https://drive.google.com/uc?export=download&id=1FS1irRp4uNrYBa_8Y5Sso37MDisa0_gS"]],
-      wdp: "./pic/cit.jpg",
+      wdp: "./pic/Cit.jpg",
       name: "CIT helpdesk",
       wabout: `“ Without Math you are single , with Math you are married, so choice is your.”`,
       social: [["demo@gmail.com"],["https://www.facebook.com/example?mibextid=ZbWKwL"],["https://www.linkedin.com/in/someone"],["https://youtube.com/"]],
