--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="Current status of weather with Ozone history and green enviorment quiz all in one web, WHITE LOTUS" lang="en-us" name="description">
     <meta content="current weather, ozone hole, ozone, quiz, green environment quiz, white lotus, kidKrishkode" lang="en-us" name="keywords">
     <meta name="author" content="WHITE LOTUS">
-    <title version="1.1">Weather by WhiteLotus</title>
+    <title version="1.4">Weather by WhiteLotus</title>
     <link rel="icon" href="./fav-icon/roundlogo.png">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -2200,10 +2200,10 @@ footer .bottom-details .bottom_text{
             </div>
         </div>
         <div class="ozonedata" id="home_images">
-            <h4>09 March 2023</h4>
+            <h4>26 April 2023</h4>
             <div id="main_image">
                 <a href="https://ozonewatch.gsfc.nasa.gov/ozone_maps/">
-                  <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M03/OZONE_D2023-03-09_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG">
+                  <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-26_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG">
                 </a>
             </div>
             <div id="main_image_palette">
@@ -2212,14 +2212,14 @@ footer .bottom-details .bottom_text{
             <p style="margin: 2px 10px; padding: 0px 5px;"><I>The latest false-color view of total ozone over the Antarctic pole. The purple and blue colors are where there is the least ozone, and the yellow and reds are where there is more ozone..</I></p>
             <span class="long_img">
                   <span class="little_img">
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M03/OZONE_D2023-03-08_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>08</p>
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M03/OZONE_D2023-03-07_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>07</p>
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M03/OZONE_D2023-03-06_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>06</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-25_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>25</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-24_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>24</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-23_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>23</p>
                   </span>
                   <span class="little_img">
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M03/OZONE_D2023-03-05_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>05</p>
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M03/OZONE_D2023-03-04_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>04</p>
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M03/OZONE_D2023-03-03_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>03</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-22_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>22</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-21_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>21</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-20_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>20</p>
                  </span>
             </span>
             <p style="margin: 2px 10px; padding: 0px 5px;">View the latest status of the ozone layer over the Antarctic, with a focus 
@@ -2726,7 +2726,7 @@ footer .bottom-details .bottom_text{
             privacy policy. If you dont follow this point then we are not responsible for any type
             of data leakage.
             <ul style="background-color: #f6f6f6; width: 90%;margin: 2px 5%;padding: 4px 8px;border-radius: 10px;border-left: 1px solid #00ff09;">
-            <li><b>Chrome</b>: Version 110.0.5481.154 or more then this version</li>
+            <li><b>Chrome</b>: Version 112.0.5615.138 or more then this version</li>
             <li><b>Microsoft Edge</b>: Version 110.0.1587.54 or more then this version</li>
             <li><b>Firefox</b>: Version 109.2.0 or more then this version</li>
             <li><b>Opera Mini</b>: Version 67.1.2254.64861 or more then this version</li>
@@ -2735,8 +2735,8 @@ footer .bottom-details .bottom_text{
             <li>etc..</li></ul>
         </p>
         <h6>Fastest Internet Speed:</h6>
-        <p><m>Use</m> fastest internet in your device, use at least 50kbps to 200kbs or more then it.
-            Donot use our website when you offline or use less then 50kbps internet speed.
+        <p><m>Use</m> fastest internet in your device, use at least 50mbps to 200mbs or more then it.
+            Donot use our website when you offline or use less then 50mbps internet speed.
         </p>
         <h6>Formal Device:</h6>
         <p><m>Use</m> Computer, Laptop or Smartphone to open this website , Donot open it in your 
@@ -3256,13 +3256,13 @@ function linkchecker(){
             contactpage();
         }else if(currentPath == `https://whitelotus4.github.io/weatherbyWHITELOTUS.github.io/#myquiz`){
             myquiz();
-        }else if(currentPath == `https://whitelotus4.github.io/weatherbyWHITELOTUS.github.io/#add`||currentPath == `https://whitelotus4.github.io/weatherbyWHITELOTUS.github.io/#weather`){
+        }else if(currentPath == `https://whitelotus4.github.io/weatherbyWHITELOTUS.github.io/#add`){
             mainpage();
             href = '#add';
-        }else if(currentPath == `https://whitelotus4.github.io/weatherbyWHITELOTUS.github.io/#myChart`||currentPath == `https://whitelotus4.github.io/weatherbyWHITELOTUS.github.io/#graph`){
+        }else if(currentPath == `https://whitelotus4.github.io/weatherbyWHITELOTUS.github.io/#myChart`){
             mainpage();
             href = '#myChart';
-        }else if(currentPath == `https://whitelotus4.github.io/weatherbyWHITELOTUS.github.io/#home_images`||currentPath == `https://whitelotus4.github.io/weatherbyWHITELOTUS.github.io/#ozone`){
+        }else if(currentPath == `https://whitelotus4.github.io/weatherbyWHITELOTUS.github.io/#home_images`){
             mainpage();
             href = '#home_images';
         }else if(currentPath == `https://whitelotus4.github.io/weatherbyWHITELOTUS.github.io/#product`){
