--- a/index.html
+++ b/index.html
@@ -2200,10 +2200,10 @@ footer .bottom-details .bottom_text{
             </div>
         </div>
         <div class="ozonedata" id="home_images">
-            <h4>26 April 2023</h4>
+            <h4>22 April 2023</h4>
             <div id="main_image">
                 <a href="https://ozonewatch.gsfc.nasa.gov/ozone_maps/">
-                  <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-26_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG">
+                  <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-22_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG">
                 </a>
             </div>
             <div id="main_image_palette">
@@ -2212,19 +2212,19 @@ footer .bottom-details .bottom_text{
             <p style="margin: 2px 10px; padding: 0px 5px;"><I>The latest false-color view of total ozone over the Antarctic pole. The purple and blue colors are where there is the least ozone, and the yellow and reds are where there is more ozone..</I></p>
             <span class="long_img">
                   <span class="little_img">
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-25_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>25</p>
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-24_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>24</p>
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-23_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>23</p>
-                  </span>
-                  <span class="little_img">
-                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-22_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>22</p>
                         <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-21_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>21</p>
                         <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-20_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>20</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-19_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>19</p>
+                  </span>
+                  <span class="little_img">
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-18_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>18</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-17_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>17</p>
+                        <img alt="Antarctic ozone map" src="https://ozonewatch.gsfc.nasa.gov/ozone_maps/images/Y2023/M04/OZONE_D2023-04-16_G%5E348X348.IOMPS_PNPP_V21_MGEOS5FP_LSH.JPG"><p>16</p>
                  </span>
             </span>
             <p style="margin: 2px 10px; padding: 0px 5px;">View the latest status of the ozone layer over the Antarctic, with a focus 
                 on the ozone hole. Satellite instruments monitor the ozone layer, and we use their data to create the images that 
-                depict the amount of ozone.</p>
+                depict the amount of ozone. <a href="#">See ozone calendar..</a></p>
             <div class="weathertable"id="ozonetable">
                 <span class="tablerow"><span class="tablehead">Years</span><span class="tablehead">1997 federal standard(>0.08ppm)</span><span class="tablehead">2008 federal standard(>0.08ppm)</span><span class="tablehead">2015 federal standard(>0.08ppm)</span></span>
                 <span class="tablerow"><span class="tableele">2020</span><span class="tableele m">97</span><span class="tableele m">142</span><span class="tableele m">157</span></span>
