--- a/index.html
+++ b/index.html
@@ -2224,7 +2224,7 @@ footer .bottom-details .bottom_text{
             </span>
             <p style="margin: 2px 10px; padding: 0px 5px;">View the latest status of the ozone layer over the Antarctic, with a focus 
                 on the ozone hole. Satellite instruments monitor the ozone layer, and we use their data to create the images that 
-                depict the amount of ozone. <a href="#">See ozone calendar..</a></p>
+                depict the amount of ozone. <a href="./ozoncal.html">See ozone calendar..</a></p>
             <div class="weathertable"id="ozonetable">
                 <span class="tablerow"><span class="tablehead">Years</span><span class="tablehead">1997 federal standard(>0.08ppm)</span><span class="tablehead">2008 federal standard(>0.08ppm)</span><span class="tablehead">2015 federal standard(>0.08ppm)</span></span>
                 <span class="tablerow"><span class="tableele">2020</span><span class="tableele m">97</span><span class="tableele m">142</span><span class="tableele m">157</span></span>
@@ -2735,7 +2735,7 @@ footer .bottom-details .bottom_text{
             <li>etc..</li></ul>
         </p>
         <h6>Fastest Internet Speed:</h6>
-        <p><m>Use</m> fastest internet in your device, use at least 50mbps to 200mbs or more then it.
+        <p><m>Use</m> fastest internet in your device, use at least 50mbps to 200mbps or more then it.
             Donot use our website when you offline or use less then 50mbps internet speed.
         </p>
         <h6>Formal Device:</h6>
@@ -3608,6 +3608,26 @@ function requestion(){
           "./img/user(unknown).png",
         text:
           "I am not like this type of presention.. I think the graph and map is made better for show us. If you read it then go and made it better i am not understand it."
+      },
+      {
+        id: 9,
+        name: "Anish Mishra",
+        job: "Student",
+        rateinfo: `<i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star checked"></i>`,
+        img:
+          "https://cdn.pixabay.com/photo/2018/11/13/21/43/instagram-3814049__340.png",
+        text:
+          "This web has a product store also , I am not well in English but I try to say that in the store I can download a research paper named 'god particle' , it so much interested.."
+      },
+      {
+        id: 10,
+        name: "Nilam Bawoli",
+        job: "Cable oparetor",
+        rateinfo: `<i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star-half-o checked"></i>`,
+        img:
+          "./img/user(nilam).png",
+        text:
+          "Thank you to send alert for heavy rain in 24 Apr 23 at my area to my phone 👍."
       }
     ];
     const img = document.getElementById("person-img");
