--- a/index.html
+++ b/index.html
@@ -2848,7 +2848,7 @@ sections ending for football.
             <ul class="box">
               <li class="link_name">Offers</li>
               <li><a href="#"onclick="notvalid();">Donation</a></li>
-              <li><a href="#"onclick="notvalid();">Advertisement</a></li>
+              <li><a href="./devtools/envbot.html"onclick="notvalid();">Advertisement</a></li>
               <li><a href="#"onclick="notvalid();">Coupons/Tickets</a></li>
               <li><a href="#"onclick="notvalid();">Subscription</a></li>
             </ul>
