--- a/devtools/envbot.html
+++ b/devtools/envbot.html
@@ -386,7 +386,7 @@ a{
     </section>
 <audio src="./img/popup-music.mp3" id="popup" autoplay="autoplay"></audio>
 <audio src="./img/notification-music.mp3" id="noti" autoplay="autoplay"></audio>
-<script src="./app.js"></script>
-<script src="./envbot_page.js"></script>
+<script src="./env_support/app.js"></script>
+<script src="./env_support/envbot_page.js"></script>
 </body>
 </html>
