--- a/devtools/envbot.html
+++ b/devtools/envbot.html
@@ -235,6 +235,11 @@ a{
 .grey{
     color: gray;
 }
+.javchat .poster{
+	width: 100%;
+	justify-content: end;
+	margin-bottom: 4px;
+}
 #description{
     display: none;
 }
